# Secure-Chat-App

./: CMakeLists.txt
include/: common.h  crypto.h  dh_utils.h
proto/: chat.proto
src/: common.cpp  crypto.cpp  dh_utils.cpp
src/client/: client.cpp
src/server/: server.cpp
